# semgrep_reporter

./: .gitignore  Dockerfile  Pipfile  README.md  pyproject.toml
reports/1725511390/: Semgrep_Demo_js_app-1725511390.html  Semgrep_Demo_pro_engine_demo-1725511390.html  Semgrep_Demo_pro_engine_demo-1725511390.json  combined_internal-1725511390.json  combined_output_internal-1725511390.html  local_scan_vulnado-1725511390.html
reports/1725511917/: Semgrep_Demo_Cesar_JsGithubAPI-1725511917.csv  Semgrep_Demo_Cesar_JsGithubAPI-1725511917.html  Semgrep_Demo_Cesar_JsGithubAPI-1725511917.json  Semgrep_Demo_Cesar_JsGithubAPI-1725511917.xlsx  Semgrep_Demo_CodeSnippets-1725511917.csv  Semgrep_Demo_CodeSnippets-1725511917.html  Semgrep_Demo_CodeSnippets-1725511917.json  Semgrep_Demo_CodeSnippets-1725511917.xlsx  Semgrep_Demo_JavaLog4J-1725511917.csv  Semgrep_Demo_JavaLog4J-1725511917.html  Semgrep_Demo_JavaLog4J-1725511917.json  Semgrep_Demo_JavaLog4J-1725511917.xlsx  Semgrep_Demo_go_app-1725511917.csv  Semgrep_Demo_go_app-1725511917.html  Semgrep_Demo_go_app-1725511917.json  Semgrep_Demo_go_app-1725511917.xlsx  Semgrep_Demo_js_app-1725511917.csv  Semgrep_Demo_js_app-1725511917.html  Semgrep_Demo_js_app-1725511917.json  Semgrep_Demo_js_app-1725511917.xlsx  Semgrep_Demo_juice_shop-1725511917.csv  Semgrep_Demo_juice_shop-1725511917.html  Semgrep_Demo_juice_shop-1725511917.json  Semgrep_Demo_juice_shop-1725511917.xlsx  (+58 more)
semgrep_reporter/: __main__.py  api.py  cli.py  css.py  datafields.py  fileutil.py  findings.py  html.py  image.py  log.py  report.py
